feat: add manual Lazada digital delivery
